--- a/Angular/src/index.html
+++ b/Angular/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Care Pair</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="./favicon-16x16.ico" type="image/x-icon">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon-16x16.ico">
 </head>
 <body>
   <app-root></app-root>
